# premium-support-highlights

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  start.sh
backend/: audit.py  auth.py  cache.py  main.py  metrics.py  pylon_client.py  pyproject.toml  report.py  slack_client.py  summary_agent.py  ticket_summarizer.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/api/accounts/[accountId]/summary/: route.ts
frontend/src/app/auth/google/callback/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AccountPicker.tsx  DownloadMenu.tsx  EmailButton.tsx  MetricCard.tsx  OptionPicker.tsx  Sidebar.tsx  SlackButton.tsx  SummaryPanel.tsx  TicketCard.tsx  TrendChart.tsx
frontend/src/lib/: api.ts  downloads.ts
